--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html class="gr__amardeepsteel_com">
+<html class="gr__amardeepsteel_com">
 
 <head>
   <title>Steel Pipe Manufacturer in India | Leading Steel Tube Supplier</title>
@@ -861,7 +861,7 @@
 
 
       <div class="product-item">
-        <img src="/images/carbon steel pro.png" alt="Carbon Steel Products" title="Carbon Steel Products">
+        <img src="/carbon-steel-pro.png" alt="Carbon Steel Products" title="Carbon Steel Products">
         <!--<div class="mask1">
 				<h2>Carbon Steel Products</h2>
 
@@ -1069,8 +1069,8 @@
             <div class="calling-at">
               <p>Call Us At</p>
               <p>Feel free to call on</p>
-              <p><a href="">+91-22-23890767</a></p>
-              <p><a href="">+91-22-23890768</a></p>
+              <p><a href="tel:+91-22-23890767">+91-22-23890767</a> / <a href="tel:+91-22-23890768">+91-22-23890768</a></p>
+              <p><a href="tel:022-67439130">022-67439130</a> / <a href="tel:022-67439165">022-67439165</a></p>
             </div>
           </div>
           <div class="call-us-at-grid">
@@ -1082,9 +1082,9 @@
             <div class="calling-at">
               <p>Drop Mail</p>
               <p>For Domestic Queries:</p>
-              <p><a href="">+91-9819823772</a></p>
+              <p><a href="mailto:sales@amardeepsteel.com">sales@amardeepsteel.com</a></p>
               <p>For International Queries:</p>
-              <p><a href="">+91-9619103479</a></p>
+              <p><a href="mailto:marketing@amardeepsteel.com">marketing@amardeepsteel.com</a></p>
             </div>
           </div>
         </div>
