--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
 
 
       <div class="product-item">
-        <img src="/carbon-steel-pro.png" alt="Carbon Steel Products" title="Carbon Steel Products">
+        <img src="images/cs.png" alt="Carbon Steel Products" title="Carbon Steel Products">
         <!--<div class="mask1">
 				<h2>Carbon Steel Products</h2>
 
