--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@
 
 
       <div class="product-item">
-        <img src="/cs.png" alt="Carbon Steel Products" title="Carbon Steel Products">
+        <img src="images/cs.png" alt="Carbon Steel Products" title="Carbon Steel Products">
         <!--<div class="mask1">
       <h2>Carbon Steel Products</h2>
 
